--- a/public/style.css
+++ b/public/style.css
@@ -145,3 +145,16 @@ a {
   background: url("food.jpg") left bottom;
   background-size: cover;
 }
+
+.TestView {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Footer {
+  background-color: blue;
+  width: 100%;
+  text-align: center;
+  color: white;
+}
