--- a/views/test.pug
+++ b/views/test.pug
@@ -1,8 +1,10 @@
 extends layout
 
 block layout-content
-  div.View
+  div.View.TestView
     h1.Banner Hello Test Page
     div.Message
       div.Title
         h1 This is a Test Page!
+    div.Footer
+        p Hello my friend we meet again. This is the footer 
