--- a/public/style.css
+++ b/public/style.css
@@ -150,11 +150,13 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 0px;
 }
 
 .Footer {
   background-color: blue;
   width: 100%;
+  height: 5em;
   text-align: center;
   color: white;
 }
